src/nvcc_target/kernel_decls.h

EXTERN_C void launch_relu_leaky_reverse_r16(
  const r16 *a_value,
        r16 *a_grads,
  const r16 *b_grads,
        r16 coef,
  len_t N
);
EXTERN_C void launch_relu_leaky_reverse_r32(
  const r32 *a_value,
        r32 *a_grads,
  const r32 *b_grads,
        r32 coef,
  len_t N
);
EXTERN_C void launch_relu_leaky_reverse_r64(
  const r64 *a_value,
        r64 *a_grads,
  const r64 *b_grads,
        r64 coef,
  len_t N
);
EXTERN_C void launch_addition_r16(
  const r16* a,
  const r16* b, 
  r16* c, 
  len_t N
);
EXTERN_C void launch_addition_c16(
  const c16* a,
  const c16* b, 
  c16* c, 
  len_t N
);
EXTERN_C void launch_addition_r32(
  const r32* a,
  const r32* b, 
  r32* c, 
  len_t N
);
EXTERN_C void launch_addition_c32(
  const c32* a,
  const c32* b, 
  c32* c, 
  len_t N
);
EXTERN_C void launch_addition_r64(
  const r64* a,
  const r64* b, 
  r64* c, 
  len_t N
);
EXTERN_C void launch_addition_c64(
  const c64* a,
  const c64* b, 
  c64* c, 
  len_t N
);
EXTERN_C void launch_addition_reverse_r16(
  r16* a, 
  const r16* b, 
  len_t N
);
EXTERN_C void launch_addition_reverse_c16(
  c16* a, 
  const c16* b, 
  len_t N
);
EXTERN_C void launch_addition_reverse_r32(
  r32* a, 
  const r32* b, 
  len_t N
);
EXTERN_C void launch_addition_reverse_c32(
  c32* a, 
  const c32* b, 
  len_t N
);
EXTERN_C void launch_addition_reverse_r64(
  r64* a, 
  const r64* b, 
  len_t N
);
EXTERN_C void launch_addition_reverse_c64(
  c64* a, 
  const c64* b, 
  len_t N
);
EXTERN_C void launch_subtraction_reverse_r16(
  r16* a, 
  const r16* b, 
  const r16 coef,
  len_t N
);
EXTERN_C void launch_subtraction_reverse_c16(
  c16* a, 
  const c16* b, 
  const r16 coef,
  len_t N
);
EXTERN_C void launch_subtraction_reverse_r32(
  r32* a, 
  const r32* b, 
  const r32 coef,
  len_t N
);
EXTERN_C void launch_subtraction_reverse_c32(
  c32* a, 
  const c32* b, 
  const r32 coef,
  len_t N
);
EXTERN_C void launch_subtraction_reverse_r64(
  r64* a, 
  const r64* b, 
  const r64 coef,
  len_t N
);
EXTERN_C void launch_subtraction_reverse_c64(
  c64* a, 
  const c64* b, 
  const r64 coef,
  len_t N
);
EXTERN_C void launch_tanh_reverse_r16(
        r16 *a_grads,
  const r16 *b_value,
  const r16 *b_grads,
  len_t N
);
EXTERN_C void launch_tanh_reverse_r32(
        r32 *a_grads,
  const r32 *b_value,
  const r32 *b_grads,
  len_t N
);
EXTERN_C void launch_tanh_reverse_r64(
        r64 *a_grads,
  const r64 *b_value,
  const r64 *b_grads,
  len_t N
);
EXTERN_C void launch_hadamard_r16(
  const r16* a,
  const r16* b, 
  r16* c, 
  len_t N
);
EXTERN_C void launch_hadamard_c16(
  const c16* a,
  const c16* b, 
  c16* c, 
  len_t N
);
EXTERN_C void launch_hadamard_r32(
  const r32* a,
  const r32* b, 
  r32* c, 
  len_t N
);
EXTERN_C void launch_hadamard_c32(
  const c32* a,
  const c32* b, 
  c32* c, 
  len_t N
);
EXTERN_C void launch_hadamard_r64(
  const r64* a,
  const r64* b, 
  r64* c, 
  len_t N
);
EXTERN_C void launch_hadamard_c64(
  const c64* a,
  const c64* b, 
  c64* c, 
  len_t N
);