.zig-cache/o/3baba126df242ac33dce9971e95bd242/cimport.zig

pub extern fn launch_broadcast_i_ij_r16(stream: StreamCtx, src: [*c]const r16, dst: [*c]r16, alpha: r16, m: len_t, n: len_t) void;
pub extern fn launch_broadcast_i_ij_r32(stream: StreamCtx, src: [*c]const r32, dst: [*c]r32, alpha: r32, m: len_t, n: len_t) void;
pub extern fn launch_broadcast_i_ij_r64(stream: StreamCtx, src: [*c]const r64, dst: [*c]r64, alpha: r64, m: len_t, n: len_t) void;
pub extern fn launch_linear_ij_kj_r16(stream: StreamCtx, A: [*c]const r16, B: [*c]const r16, alpha: r16, C: [*c]const r16, beta: r16, Y: [*c]r16, m: len_t, n: len_t, k: len_t) void;
pub extern fn launch_linear_ij_kj_r32(stream: StreamCtx, A: [*c]const r32, B: [*c]const r32, alpha: r32, C: [*c]const r32, beta: r32, Y: [*c]r32, m: len_t, n: len_t, k: len_t) void;
pub extern fn launch_linear_ij_kj_r64(stream: StreamCtx, A: [*c]const r64, B: [*c]const r64, alpha: r64, C: [*c]const r64, beta: r64, Y: [*c]r64, m: len_t, n: len_t, k: len_t) void;
pub extern fn launch_relu_leaky_reverse_r16(stream: StreamCtx, a_value: [*c]const r16, a_grads: [*c]r16, b_grads: [*c]const r16, coef: r16, N: len_t) void;
pub extern fn launch_relu_leaky_reverse_r32(stream: StreamCtx, a_value: [*c]const r32, a_grads: [*c]r32, b_grads: [*c]const r32, coef: r32, N: len_t) void;
pub extern fn launch_relu_leaky_reverse_r64(stream: StreamCtx, a_value: [*c]const r64, a_grads: [*c]r64, b_grads: [*c]const r64, coef: r64, N: len_t) void;
pub extern fn launch_addition_r16(stream: StreamCtx, a: [*c]const r16, b: [*c]const r16, c: [*c]r16, N: len_t) void;
pub extern fn launch_addition_c16(stream: StreamCtx, a: [*c]const c16, b: [*c]const c16, c: [*c]c16, N: len_t) void;
pub extern fn launch_addition_r32(stream: StreamCtx, a: [*c]const r32, b: [*c]const r32, c: [*c]r32, N: len_t) void;
pub extern fn launch_addition_c32(stream: StreamCtx, a: [*c]const c32, b: [*c]const c32, c: [*c]c32, N: len_t) void;
pub extern fn launch_addition_r64(stream: StreamCtx, a: [*c]const r64, b: [*c]const r64, c: [*c]r64, N: len_t) void;
pub extern fn launch_addition_c64(stream: StreamCtx, a: [*c]const c64, b: [*c]const c64, c: [*c]c64, N: len_t) void;
pub extern fn launch_broadcast_j_ij_r16(stream: StreamCtx, src: [*c]const r16, dst: [*c]r16, alpha: r16, m: len_t, n: len_t) void;
pub extern fn launch_broadcast_j_ij_r32(stream: StreamCtx, src: [*c]const r32, dst: [*c]r32, alpha: r32, m: len_t, n: len_t) void;
pub extern fn launch_broadcast_j_ij_r64(stream: StreamCtx, src: [*c]const r64, dst: [*c]r64, alpha: r64, m: len_t, n: len_t) void;
pub extern fn launch_kernel_sort_key_i_r16(stream: StreamCtx, gpu_p1: [*c]SortPair_r16, per_thread_remaining: [*c]c_uint, n: len_t) void;
pub extern fn launch_kernel_sort_key_i_r32(stream: StreamCtx, gpu_p1: [*c]SortPair_r32, per_thread_remaining: [*c]c_uint, n: len_t) void;
pub extern fn launch_kernel_sort_key_i_r64(stream: StreamCtx, gpu_p1: [*c]SortPair_r64, per_thread_remaining: [*c]c_uint, n: len_t) void;
pub extern fn launch_momentum_r16(stream: StreamCtx, a_value: [*c]r16, a_grads: [*c]const r16, mtm: [*c]r16, rate: r16, alpha: r16, lower: r16, upper: r16, n: len_t) void;
pub extern fn launch_momentum_r32(stream: StreamCtx, a_value: [*c]r32, a_grads: [*c]const r32, mtm: [*c]r32, rate: r32, alpha: r32, lower: r32, upper: r32, n: len_t) void;
pub extern fn launch_momentum_r64(stream: StreamCtx, a_value: [*c]r64, a_grads: [*c]const r64, mtm: [*c]r64, rate: r64, alpha: r64, lower: r64, upper: r64, n: len_t) void;
pub extern fn launch_softmax_ij_j_r16(stream: StreamCtx, A: [*c]const r16, B: [*c]r16, m: len_t, n: len_t) void;
pub extern fn launch_softmax_ij_j_r32(stream: StreamCtx, A: [*c]const r32, B: [*c]r32, m: len_t, n: len_t) void;
pub extern fn launch_softmax_ij_j_r64(stream: StreamCtx, A: [*c]const r64, B: [*c]r64, m: len_t, n: len_t) void;
pub extern fn launch_bce_loss_i_i_r16(stream: StreamCtx, src_value: [*c]const r16, src_grads: [*c]r16, trg_value: [*c]const r16, scratch: [*c]r16, redux: [*c]f32, m: len_t) void;
pub extern fn launch_bce_loss_i_i_r32(stream: StreamCtx, src_value: [*c]const r32, src_grads: [*c]r32, trg_value: [*c]const r32, scratch: [*c]r32, redux: [*c]f32, m: len_t) void;
pub extern fn launch_bce_loss_i_i_r64(stream: StreamCtx, src_value: [*c]const r64, src_grads: [*c]r64, trg_value: [*c]const r64, scratch: [*c]r64, redux: [*c]f32, m: len_t) void;
pub extern fn launch_softmax_i_i_reverse_r16(stream: StreamCtx, a_grads: [*c]r16, b_value: [*c]const r16, b_grads: [*c]const r16, scratch: [*c]r16, m: len_t) void;
pub extern fn launch_softmax_i_i_reverse_r32(stream: StreamCtx, a_grads: [*c]r32, b_value: [*c]const r32, b_grads: [*c]const r32, scratch: [*c]r32, m: len_t) void;
pub extern fn launch_softmax_i_i_reverse_r64(stream: StreamCtx, a_grads: [*c]r64, b_value: [*c]const r64, b_grads: [*c]const r64, scratch: [*c]r64, m: len_t) void;
pub extern fn launch_mse_loss_ij_j_r16(stream: StreamCtx, src_value: [*c]const r16, src_grads: [*c]r16, trgs: [*c]const len_t, scratch: [*c]r16, redux: [*c]f32, m: len_t, n: len_t) void;
pub extern fn launch_mse_loss_ij_j_r32(stream: StreamCtx, src_value: [*c]const r32, src_grads: [*c]r32, trgs: [*c]const len_t, scratch: [*c]r32, redux: [*c]f32, m: len_t, n: len_t) void;
pub extern fn launch_mse_loss_ij_j_r64(stream: StreamCtx, src_value: [*c]const r64, src_grads: [*c]r64, trgs: [*c]const len_t, scratch: [*c]r64, redux: [*c]f32, m: len_t, n: len_t) void;
pub extern fn launch_addition_reverse_r16(stream: StreamCtx, a: [*c]r16, b: [*c]const r16, N: len_t) void;
pub extern fn launch_addition_reverse_c16(stream: StreamCtx, a: [*c]c16, b: [*c]const c16, N: len_t) void;
pub extern fn launch_addition_reverse_r32(stream: StreamCtx, a: [*c]r32, b: [*c]const r32, N: len_t) void;
pub extern fn launch_addition_reverse_c32(stream: StreamCtx, a: [*c]c32, b: [*c]const c32, N: len_t) void;
pub extern fn launch_addition_reverse_r64(stream: StreamCtx, a: [*c]r64, b: [*c]const r64, N: len_t) void;
pub extern fn launch_addition_reverse_c64(stream: StreamCtx, a: [*c]c64, b: [*c]const c64, N: len_t) void;
pub extern fn launch_convolution_2D_r16(stream: StreamCtx, src: [*c]const r16, kern: [*c]const r16, dst: [*c]r16, m: len_t, n: len_t, k_dim: len_t, windows: len_t, stride: len_t) void;
pub extern fn launch_convolution_2D_r32(stream: StreamCtx, src: [*c]const r32, kern: [*c]const r32, dst: [*c]r32, m: len_t, n: len_t, k_dim: len_t, windows: len_t, stride: len_t) void;
pub extern fn launch_convolution_2D_r64(stream: StreamCtx, src: [*c]const r64, kern: [*c]const r64, dst: [*c]r64, m: len_t, n: len_t, k_dim: len_t, windows: len_t, stride: len_t) void;
pub extern fn launch_cce_loss_ij_j_r16(stream: StreamCtx, src_value: [*c]const r16, src_grads: [*c]r16, trgs: [*c]const c_uint, scratch: [*c]r16, redux: [*c]f32, m: len_t, n: len_t) void;
pub extern fn launch_cce_loss_ij_j_r32(stream: StreamCtx, src_value: [*c]const r32, src_grads: [*c]r32, trgs: [*c]const c_uint, scratch: [*c]r32, redux: [*c]f32, m: len_t, n: len_t) void;
pub extern fn launch_cce_loss_ij_j_r64(stream: StreamCtx, src_value: [*c]const r64, src_grads: [*c]r64, trgs: [*c]const c_uint, scratch: [*c]r64, redux: [*c]f32, m: len_t, n: len_t) void;
pub extern fn launch_sequence_r16(stream: StreamCtx, dev_a: [*c]r16, init: r16, step: r16, N: len_t) void;
pub extern fn launch_sequence_r32(stream: StreamCtx, dev_a: [*c]r32, init: r32, step: r32, N: len_t) void;
pub extern fn launch_sequence_r64(stream: StreamCtx, dev_a: [*c]r64, init: r64, step: r64, N: len_t) void;
pub extern fn launch_subtraction_reverse_r16(stream: StreamCtx, a: [*c]r16, b: [*c]const r16, coef: r16, N: len_t) void;
pub extern fn launch_subtraction_reverse_c16(stream: StreamCtx, a: [*c]c16, b: [*c]const c16, coef: r16, N: len_t) void;
pub extern fn launch_subtraction_reverse_r32(stream: StreamCtx, a: [*c]r32, b: [*c]const r32, coef: r32, N: len_t) void;
pub extern fn launch_subtraction_reverse_c32(stream: StreamCtx, a: [*c]c32, b: [*c]const c32, coef: r32, N: len_t) void;
pub extern fn launch_subtraction_reverse_r64(stream: StreamCtx, a: [*c]r64, b: [*c]const r64, coef: r64, N: len_t) void;
pub extern fn launch_subtraction_reverse_c64(stream: StreamCtx, a: [*c]c64, b: [*c]const c64, coef: r64, N: len_t) void;
pub extern fn launch_gradient_descent_r16(stream: StreamCtx, a_value: [*c]r16, a_grads: [*c]const r16, rate: r16, lower: r16, upper: r16, n: len_t) void;
pub extern fn launch_gradient_descent_r32(stream: StreamCtx, a_value: [*c]r32, a_grads: [*c]const r32, rate: r32, lower: r32, upper: r32, n: len_t) void;
pub extern fn launch_gradient_descent_r64(stream: StreamCtx, a_value: [*c]r64, a_grads: [*c]const r64, rate: r64, lower: r64, upper: r64, n: len_t) void;
pub extern fn launch_minmax_ij_j_reverse_r16(stream: StreamCtx, a_value: [*c]const r16, a_grads: [*c]r16, b_grads: [*c]const r16, m: len_t, n: len_t) void;
pub extern fn launch_minmax_ij_j_reverse_r32(stream: StreamCtx, a_value: [*c]const r32, a_grads: [*c]r32, b_grads: [*c]const r32, m: len_t, n: len_t) void;
pub extern fn launch_minmax_ij_j_reverse_r64(stream: StreamCtx, a_value: [*c]const r64, a_grads: [*c]r64, b_grads: [*c]const r64, m: len_t, n: len_t) void;
pub extern fn launch_convolution_2D_source_reverse_r16(stream: StreamCtx, src_grads: [*c]r16, kern_value: [*c]const r16, dst_grads: [*c]const r16, m: len_t, n: len_t, k_dim: len_t, windows: len_t, stride: len_t) void;
pub extern fn launch_convolution_2D_source_reverse_r32(stream: StreamCtx, src_grads: [*c]r32, kern_value: [*c]const r32, dst_grads: [*c]const r32, m: len_t, n: len_t, k_dim: len_t, windows: len_t, stride: len_t) void;
pub extern fn launch_convolution_2D_source_reverse_r64(stream: StreamCtx, src_grads: [*c]r64, kern_value: [*c]const r64, dst_grads: [*c]const r64, m: len_t, n: len_t, k_dim: len_t, windows: len_t, stride: len_t) void;
pub extern fn launch_softmax_ij_j_reverse_r16(stream: StreamCtx, A_grads: [*c]r16, B_value: [*c]const r16, B_grads: [*c]const r16, m: len_t, n: len_t) void;
pub extern fn launch_softmax_ij_j_reverse_r32(stream: StreamCtx, A_grads: [*c]r32, B_value: [*c]const r32, B_grads: [*c]const r32, m: len_t, n: len_t) void;
pub extern fn launch_softmax_ij_j_reverse_r64(stream: StreamCtx, A_grads: [*c]r64, B_value: [*c]const r64, B_grads: [*c]const r64, m: len_t, n: len_t) void;
pub extern fn launch_max_key_ij_j_r16(stream: StreamCtx, src: [*c]const r16, keys: [*c]c_uint, m: len_t, n: len_t) void;
pub extern fn launch_max_key_ij_j_r32(stream: StreamCtx, src: [*c]const r32, keys: [*c]c_uint, m: len_t, n: len_t) void;
pub extern fn launch_max_key_ij_j_r64(stream: StreamCtx, src: [*c]const r64, keys: [*c]c_uint, m: len_t, n: len_t) void;
pub extern fn launch_tanh_reverse_r16(stream: StreamCtx, a_grads: [*c]r16, b_value: [*c]const r16, b_grads: [*c]const r16, N: len_t) void;
pub extern fn launch_tanh_reverse_r32(stream: StreamCtx, a_grads: [*c]r32, b_value: [*c]const r32, b_grads: [*c]const r32, N: len_t) void;
pub extern fn launch_tanh_reverse_r64(stream: StreamCtx, a_grads: [*c]r64, b_value: [*c]const r64, b_grads: [*c]const r64, N: len_t) void;
pub extern fn launch_hadamard_r16(stream: StreamCtx, a: [*c]const r16, b: [*c]const r16, c: [*c]r16, N: len_t) void;
pub extern fn launch_hadamard_c16(stream: StreamCtx, a: [*c]const c16, b: [*c]const c16, c: [*c]c16, N: len_t) void;
pub extern fn launch_hadamard_r32(stream: StreamCtx, a: [*c]const r32, b: [*c]const r32, c: [*c]r32, N: len_t) void;
pub extern fn launch_hadamard_c32(stream: StreamCtx, a: [*c]const c32, b: [*c]const c32, c: [*c]c32, N: len_t) void;
pub extern fn launch_hadamard_r64(stream: StreamCtx, a: [*c]const r64, b: [*c]const r64, c: [*c]r64, N: len_t) void;
pub extern fn launch_hadamard_c64(stream: StreamCtx, a: [*c]const c64, b: [*c]const c64, c: [*c]c64, N: len_t) void;
pub extern fn launch_selu_r16(stream: StreamCtx, a: [*c]const r16, b: [*c]r16, n: len_t) void;
pub extern fn launch_selu_r32(stream: StreamCtx, a: [*c]const r32, b: [*c]r32, n: len_t) void;
pub extern fn launch_selu_r64(stream: StreamCtx, a: [*c]const r64, b: [*c]r64, n: len_t) void;
